test: add Mockito as a dependency

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ dependencies {
 
 	//Faker Library
 	implementation 'net.datafaker:datafaker:2.0.2'
+
+	testImplementation "org.mockito:mockito-core:5.+"
 }
 
 tasks.named('test') {
