--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,10 @@ dependencies {
 	implementation 'net.datafaker:datafaker:2.0.2'
 
 	testImplementation "org.mockito:mockito-core:5.+"
+
+	//ThymeleafLayoutDialect 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 }
 
 tasks.named('test') {
