--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,15 @@ dependencies {
 	implementation 'net.datafaker:datafaker:2.0.2'
 
 	testImplementation "org.mockito:mockito-core:5.+"
+
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	implementation 'com.google.code.gson:gson:2.10.1'
+
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
