Set JWT secret key and token expiration time in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 com.onspring-customer.upload.path=upload
 
+logging.level.org.springframework.security.web=TRACE
+
+
+jwt.secret=OnSpring2024CustomerApp_SecureTokenKey_RandomString_$3cur3K3y!@#
+jwt.token-validity-in-seconds=3600 
+
