--- a/onspring-user-app/package.json
+++ b/onspring-user-app/package.json
@@ -23,11 +23,13 @@
     "@react-navigation/material-top-tabs": "^7.2.3",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -37,7 +39,8 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
     "react-native-tab-view": "^4.0.6",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
