add session timeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ jwt.refresh-secret=G6hJ2kL9pS5wE3bN7mC1xZ4fT8qR0yU
 jwt.token-validity-in-seconds=5
 jwt.refresh-token-validity-in-seconds=604800
 
+server.servlet.session.timeout=2m
+
