Add dotenv configuration for environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=onspring-customer
 
-#MySQL Settings
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/onspringdb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.username=onspring
-spring.datasource.password=sesac1234
-
+# MySQL Settings
+spring.datasource.driver-class-name=${DB_DRIVER}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA and Hibernate Settings
 spring.jpa.defer-datasource-initialization=true
@@ -17,15 +16,14 @@ spring.jpa.properties.hibernate.format_sql=true
 # File Upload Configuration
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
-com.onspring-customer.upload.path=upload
+com.onspring-customer.upload.path=${UPLOAD_PATH}
 
 logging.level.org.springframework.security.web=TRACE
 
+# JWT Settings
+jwt.secret=${JWT_SECRET}
+jwt.refresh-secret=${JWT_REFRESH_SECRET}
+jwt.token-validity-in-seconds=${JWT_TOKEN_VALIDITY}
+jwt.refresh-token-validity-in-seconds=${JWT_REFRESH_TOKEN_VALIDITY}
 
-jwt.secret=OnSpring2024CustomerApp_SecureTokenKey_RandomString_$3cur3K3y!@#
-jwt.refresh-secret=G6hJ2kL9pS5wE3bN7mC1xZ4fT8qR0yU
-jwt.token-validity-in-seconds=5
-jwt.refresh-token-validity-in-seconds=604800
-
-server.servlet.session.timeout=2m
-
+server.servlet.session.timeout=${SERVER_SESSION_TIMEOUT}
