properties: add port info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ jwt.token-validity-in-seconds=${JWT_TOKEN_VALIDITY}
 jwt.refresh-token-validity-in-seconds=${JWT_REFRESH_TOKEN_VALIDITY}
 
 server.servlet.session.timeout=${SERVER_SESSION_TIMEOUT}
+
+server.port=8080
+server.address=0.0.0.0
