--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,11 @@ dependencies {
 
 	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	implementation 'software.amazon.awssdk:s3:2.17.121'  // AWS SDK v2 버전, 최신 버전 사용
+	implementation 'software.amazon.awssdk:auth:2.17.121'  // 인증 관련 의존성 추가
+
 
 }
 
