--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,10 @@ jwt.refresh-token-validity-in-seconds=${JWT_REFRESH_TOKEN_VALIDITY}
 
 server.servlet.session.timeout=${SERVER_SESSION_TIMEOUT}
 
+aws.accessKeyId=${AWS_ACCESS_KEY_ID}
+aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
+aws.region=${AWS_REGION}
+aws.s3.bucket-name=${AWS_S3_BUCKET_NAME}
+
 server.port=8080
 server.address=0.0.0.0
