apk 파일 추출 관련 설정 추가

--- a/onspring-user-app/android/app/build.gradle
+++ b/onspring-user-app/android/app/build.gradle
@@ -88,7 +88,7 @@ android {
 
     namespace 'com.anonymous.franchiseapp'
     defaultConfig {
-        applicationId 'com.anonymous.franchiseapp'
+        applicationId 'com.anonymous.userapp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
