--- a/onspring-user-app/android/app/src/main/AndroidManifest.xml
+++ b/onspring-user-app/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="com.anonymous.franchiseapp"/>
+        <data android:scheme="com.anonymous.userapp"/>
       </intent-filter>
     </activity>
   </application>
