--- a/onspring-user-app/package.json
+++ b/onspring-user-app/package.json
@@ -35,16 +35,20 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.0",
+    "react-native-pager-view": "^6.7.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-screens": "^4.10.0",
     "react-native-tab-view": "^4.0.6",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "latest",
+    "@react-native/metro-config": "^0.79.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.1.1",
