--- a/onspring-franchise-app/package.json
+++ b/onspring-franchise-app/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native/metro-config": "^0.79.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
@@ -26,7 +27,9 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-jwt-decode": "^1.0.3",
+    "react-native-pager-view": "^6.7.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
