--- a/onspring-franchise-app/package.json
+++ b/onspring-franchise-app/package.json
@@ -25,6 +25,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-action-sheet": "^2.2.0",
     "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-image-picker": "^8.2.0",
@@ -33,6 +34,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0"
   },
