--- a/onspring-user-app/android/gradle.properties
+++ b/onspring-user-app/android/gradle.properties
@@ -54,3 +54,7 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+# Add these properties to enable AndroidX migration
+android.useAndroidX=true
+android.enableJetifier=true
