refactor: Gradle 빌드 안정화를 위해 JVM 힙 메모리 4GB로 확장

--- a/user-app/onspring-user-app/android/gradle.properties
+++ b/user-app/onspring-user-app/android/gradle.properties
@@ -58,3 +58,5 @@ expo.useLegacyPackaging=false
 # Add these properties to enable AndroidX migration
 android.useAndroidX=true
 android.enableJetifier=true
+
+org.gradle.jvmargs=-Xmx4g
