--- a/franchise-app/onspring-franchise-app/android/gradle.properties
+++ b/franchise-app/onspring-franchise-app/android/gradle.properties
@@ -60,3 +60,5 @@ org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
 android.useAndroidX=true
  
 android.enableJetifier=true
+
+org.gradle.jvmargs=-Xmx4g
