refactor : docker-compose.yml 루트 폴더로 위치 변경

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   app:
-    build: .
+    build: src/main/java
     container_name: sesac-container
     ports:
       - "8080:8080"
