--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:17
-ARG JAR_FILE=build/libs/*.jar
+
+ARG JAR_FILE=build/libs/onspring-customer-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} app.jar
 COPY .env .env
 
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
