--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - .env
     depends_on:
       - redis
+    networks:
+      - backend-network
 
   redis:
     image: redis:7.2
@@ -19,6 +21,11 @@ services:
       - "6379:6379"
     volumes:
       - redis-data:/data
+    networks:
+      - backend-network
 
 volumes:
   redis-data:
+
+networks:
+  backend-network:
