--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,5 +33,7 @@ aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
 aws.region=${AWS_REGION}
 aws.s3.bucket-name=${AWS_S3_BUCKET_NAME}
 
+spring.data.redis.url=redis://redis:6379
+
 server.port=8080
 server.address=0.0.0.0
