--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -41,7 +41,17 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// Mockito
+	testImplementation 'org.mockito:mockito-core:5.12.0'
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
+
+	implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	implementation 'org.modelmapper:modelmapper:3.1.0'
@@ -86,7 +96,6 @@ dependencies {
 
 
 }
-
 
 task copyEnvFile(type: Copy) {
 	from '.env'
